[package]
categories  = ["games", "rendering", "graphical"]
description = "Away Team Roguelike Game Utils"
edition     = "2021"
license     = "BlueOak-1.0.0"
name        = "atrl-renderer"
publish     = false
readme      = "../README.md"
repository  = "https://github.com/Laocoon7/atrl"
version     = "0.1.0"

[features]
debug   = []
dev     = []
release = []

[dependencies]
atrl-data   = { workspace = true }
atrl-raws   = { workspace = true }

bevy             = { workspace = true }
bevy_ecs_tilemap = { workspace = true }
bevy_tileset     = { workspace = true }
iyes_loopless    = { workspace = true }
iyes_progress    = { workspace = true }
kayak_font       = { workspace = true }
kayak_ui         = { workspace = true }
smart-default    = { workspace = true }
