[package]
categories  = ["games", "game-save", "serialization"]
description = "Away Team Roguelike Game Utils"
edition     = "2021"
license     = "BlueOak-1.0.0"
name        = "atrl-saveload"
publish     = false
readme      = "../README.md"
repository  = "https://github.com/Laocoon7/atrl"
version     = "0.1.0"

[dependencies]
atrl-common = { workspace = true }
atrl-data   = { workspace = true }
bevy        = { workspace = true }
