[package]
categories  = ["games", "game-utils"]
description = "Away Team Roguelike Game Utils"
edition     = "2021"
license     = "BlueOak-1.0.0"
name        = "atrl-utils"
publish     = false
readme      = "../README.md"
repository  = "https://github.com/Laocoon7/atrl"
version     = "0.1.0"

[dependencies]
bevy        = {workspace = true}
parking_lot = {workspace = true}
serde       = {workspace = true}

######################################
############    Random    ############
######################################
noise       = {workspace = true}
rand        = {workspace = true}
rand_pcg    = {workspace = true}
rand_seeder = {workspace = true}
xxhash-rust = {workspace = true}
